# util

./: CMakeLists.txt  README.md  build.sh  main.cpp
base/: Assign.hpp  EnableSharedFromThis.hpp  Format.hpp  IgnoreUnused.hpp  LexicalCast.hpp  NoCopyAble.hpp  Optional.hpp  SharedPtr.hpp  Singleton.hpp  Timer.hpp  UniquePtr.hpp  WeakPtr.hpp
learn_template/: common_type.hpp  compile_time.hpp  move_enable_if.hpp  my_traits.hpp  raw_array.hpp  template_friend.hpp  template_lib.hpp  using_typename.hpp  var_template.hpp
test/: testAssign.cpp  testEnableSharedFromThis.cpp  testFormat.cpp  testLexicalCast.cpp  testOptianal.cpp  testSharedPtr.cpp  testTimer.cpp  testUniquePtr.cpp  testWeakPtr.cpp
testTemplate/: testCommonType.cpp  testCompileTime.cpp  testMoveEnableIf.cpp  testRawArray.cpp  testTemplateLib.cpp  testTraits.cpp  testUsingTypename.cpp  testVarTemplate.cpp
